# DocuMind

./: README.md  pyproject.toml
documind/: manage.py
documind/api/: urls.py  views.py
documind/articles/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
documind/articles/migrations/: 0001_initial.py
documind/chat/: admin.py  consumers.py  models.py  tasks.py  views.py
documind/chat/migrations/: 0001_initial.py  0002_chat_is_permanent_pdfdocument.py  0003_pdfdocument_text.py  0004_remove_pdfdocument_file.py
documind/chroma_db/: chroma.sqlite3
documind/documind/: asgi.py  celery.py  settings.py  tasks.py  urls.py  vectorstore.py  views.py
documind/static/css/: article_form.css  article_form.css.map  chat.css  chat.css.map
documind/static/scss/: article_form.scss  chat.scss
documind/templates/admin/: article_create_with_pdf.html  change_list.html  chat_room.html
